# cogsci-wordsearch-final

./: LICENSE  README.md  dashboard.py  experiment_a_analysis.ipynb  experiment_b_analysis.ipynb  generate_puzzles.ipynb  generate_strategy_animations.py  puzzle_sets.py  pyproject.toml  requirements.txt  run_experiment_.ipynb  run_experiment_A.ipynb  solver.py  test_strategies.py  testing_nb.ipynb
Wordsearch_Generator/: Wordsearch.py
data/part_a/: metadata.json
data/part_b/: metadata.json  part_b_results.csv
misc/: QUICKSTART.md  generate_puzzles.ipynb
notebooks/: experiment_a_analysis.ipynb  experiment_b_analysis.ipynb  run_experiment_A.ipynb  run_experiment_B.ipynb  testing_nb.ipynb
scripts/: generate_strategy_animations.py
strategies/: __init__.py  brute_force.py  ordered_search.py  patch_search.py  random_sample.py  random_to_ordered.py  uncommon_letter_search.py
visualizations/: __init__.py  animation_builder.py  conceptual_animator.py  frame_generator.py  tracking_strategy.py
wordsearch/: __init__.py  puzzle_sets.py  solver.py  strategy.py
wordsearch/generator/: README.md  __init__.py
wordsearch/strategies/: __init__.py  brute_force.py  ordered_search.py  patch_search.py  random_sample.py  random_to_ordered.py  uncommon_letter_search.py
wordsearch/visualizations/: README.md  __init__.py  animation_builder.py  conceptual_animator.py  frame_generator.py  tracking_strategy.py
